# tetra3-rs

./: .gitignore  Cargo.toml  NOTICE  README.md  valgrind_test.sh
data/: test_cal.toml
data/gaia/: gaia-mag-lt-8.csv  gaia-mag-lt-9.csv
docs/: algo.md
examples/: pattern_hash_demo.rs  tetrars.rs
src/: calibration.rs  centroids.rs  database.rs  geometry.rs  hash_table.rs  img_filter.rs  lib.rs  solver.rs
tools/: README.md  convert_npz.py  pyproject.toml
